welcome.lessons.welcome.array.island.Island.scala.error
island:1: error: class Array takes type parameters
def island(liste:Array){
                 ^island:1: error: class Array takes type parameters
def island(liste:Array){
                 ^